--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,12 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "corn": "^0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.21.0",
-    "mongoose": "^8.20.0"
+    "mongoose": "^8.20.1"
   }
 }
